--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
     "expo-camera": "~9.1.0",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.4.1",
     "react": "16.13.1",
