--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.9",
+    "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
     "expo-camera": "~9.1.0",
+    "expo-constants": "~9.3.3",
     "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.4.1",
+    "metro-config": "^0.59.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -25,6 +27,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-text-input-mask": "^3.1.4",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.3",
